Bump version to flyway-10.7.0
Please see the GH release for the release notes

Bump Flyway Community DB Support version

remove dependency on vulnerable derby packages

closes #3821 Support latest version of Snowflake (8.3)

Transfer of `flyway-community-db-support` to https://github.com/flyway/flyway-community-db-support

Add Working Directory as usable default location for configuration

Closes #3823: Filter on the table schema name when selecting all foreign key constraints, to make sure that no system constraints are included in the results if they were to be added in the future. This also makes sure that if Cloud Spanner starts supporting named user schemas, the listed foreign keys are consistent with the tables that are used, which are all filtered based on an empty schema name.

Add clickhouse to documentation

escape dollar signs and backslashes in property resolver values

Bump MariaDB JDBC driver to version 3.3.2

Add mapping exception for jdbcproperties in commandline

Make Flyway "Output Query Results" an open source feature